--- a/webui/templates/animation.html
+++ b/webui/templates/animation.html
@@ -7,6 +7,16 @@
 {% include 'partials/header.html' %}
 
 {% block content %}
+
+<div class="container">
+    <div class="toggle-container">
+        <label class="switch">
+            <input type="checkbox" id="enableToggle">
+            <span class="slider round"></span>
+        </label>
+    </div>
+</div>
+
 <div class="container">
     <form id="sliderForm">
         <div>
@@ -120,8 +130,8 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="static/js/display.js"></script>
 <script src="static/js/animation.js"></script>
+<script src="static/js/display.js"></script>
 {% endblock %}
 </body>
 
