--- a/webui/templates/partials/header.html
+++ b/webui/templates/partials/header.html
@@ -25,6 +25,6 @@
     <ul class="menu-items">
         <li><a href="{{ url_for('animation') }}"><i class="fas fa-play-circle"></i> Animation</a></li>
         <li><a href="{{ url_for('camera') }}"><i class="fas fa-video"></i> Camera</a></li>
-        <li><a href="{{ url_for('settings') }}"><i class="fas fa-cog"></i> Settings</a></li>
+        <li><a href="{{ url_for('state') }}"><i class="fas fa-gauge"></i> State</a></li>
     </ul>
 </div>
