--- a/webui/templates/partials/header.html
+++ b/webui/templates/partials/header.html
@@ -14,7 +14,6 @@
         </button>
     </div>
 </nav>
-
 <div class="mobile-menu">
     <div class="menu-header">
         <h2>Menu</h2>
@@ -26,5 +25,6 @@
         <li><a href="{{ url_for('animation') }}"><i class="fas fa-play-circle"></i> Animation</a></li>
         <li><a href="{{ url_for('camera') }}"><i class="fas fa-video"></i> Camera</a></li>
         <li><a href="{{ url_for('state') }}"><i class="fas fa-gauge"></i> State</a></li>
+        <li><a href="{{ url_for('settings') }}"><i class="fas fa-cogs"></i> Setup</a></li>
     </ul>
 </div>
