--- a/webui/templates/animation.html
+++ b/webui/templates/animation.html
@@ -15,7 +15,7 @@
     <form id="sliderForm">
         <div class="left">
             {% for servo in servos1 %}
-            <p>{{ servo.name }}</p>
+            <p><span id="{{ servo.name }}-value"></span> {{ servo.name }}</p>
             <input type="range" id="{{ servo.name }}" name="{{ servo.name }}" min="{{ servo.min }}"
                 max="{{ servo.max }}" value="{{ (servo.min + servo.max) / 2 }}">
             {% endfor %}
@@ -25,13 +25,13 @@
             {% endif %}
 
             {% for gpio in gpios1 %}
-            <p>{{ gpio.name }}</p>
+            <p><span id="{{ gpio.name }}-value"></span> {{ gpio.name }}</p>
             <input type="range" id="{{ gpio.name }}" name="{{ gpio.name }}" min="0" max="180" value="0">
             {% endfor %}
         </div>
         <div class="right">
             {% for servo in servos2 %}
-            <p>{{ servo.name }}</p>
+            <p><span id="{{ servo.name }}-value"></span> {{ servo.name }}</p>
             <input type="range" id="{{ servo.name }}" name="{{ servo.name }}" min="{{ servo.min }}"
                 max="{{ servo.max }}" value="{{ (servo.min + servo.max) / 2 }}">
             {% endfor %}
@@ -41,7 +41,7 @@
             {% endif %}
 
             {% for gpio in gpios2 %}
-            <p>{{ gpio.name }}</p>
+            <p><span id="{{ gpio.name }}-value"></span> {{ gpio.name }}</p>
             <input type="range" id="{{ gpio.name }}" name="{{ gpio.name }}" min="0" max="180" value="0">
             {% endfor %}
         </div>
