--- a/webui/templates/partials/header.html
+++ b/webui/templates/partials/header.html
@@ -23,6 +23,7 @@
     </div>
     <ul class="menu-items">
         <li><a href="{{ url_for('animation') }}"><i class="fas fa-play-circle"></i> Animation</a></li>
+        <li><a href="{{ url_for('manage_animations') }}"><i class="fas fa-list-ul"></i> Animations</a></li>
         <li><a href="{{ url_for('camera') }}"><i class="fas fa-video"></i> Camera</a></li>
         <li><a href="{{ url_for('state') }}"><i class="fas fa-gauge"></i> State</a></li>
         <li><a href="{{ url_for('settings') }}"><i class="fas fa-cogs"></i> Setup</a></li>
